--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.14.2"
+    "luxon": "^3.6.1",
+    "mongodb": "^6.14.2",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -25,7 +27,9 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^22.13.5",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
