--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "inversify": "^7.5.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.6.1",
     "mongodb": "^6.14.2",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
