--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.6.1",
     "mongodb": "^6.14.2",
+    "mongoose": "^8.14.3",
     "nodemailer": "^6.10.1",
     "reflect-metadata": "^0.2.2"
   },
